cmake_minimum_required(VERSION 3.16)

project(adventOfCode2023)

add_compile_options(-std=c++17)

add_subdirectory(3a)
add_subdirectory(3b)

add_subdirectory(4a)
add_subdirectory(4b)

add_subdirectory(5a)
add_subdirectory(5b)

add_subdirectory(6a)
add_subdirectory(6b)

add_subdirectory(7a)
add_subdirectory(7b)

add_subdirectory(8a)
add_subdirectory(8b)

add_subdirectory(9a)
add_subdirectory(9b)

add_subdirectory(10a)
add_subdirectory(10b)

add_subdirectory(11a)
add_subdirectory(11b)